sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: illegal start of simple expression
    if (plusPetit(i:int,i+1))) {
                             ^